# aphelium

./: .gitignore  Cargo.toml  dash.bat  go.bat
dashboard/: main.py
src/: data.rs  executor.rs  generator.rs  main.rs
